# CGraphics

./: .gitignore  CMakeLists.txt  Readme.md
src/: display.c  rotate_triangle.c  utilities.c  utilities.h
